Some tidying up of the codebase